worked on email modal design and functionality

--- a/public/components/emailInputComponent/emailInput.template.html
+++ b/public/components/emailInputComponent/emailInput.template.html
@@ -2,3 +2,6 @@
     <input type="text" placeholder="Email" ng-model="$ctrl.emailInfo"/>
     <i class="fa fa-long-arrow-right" aria-hidden="true" ng-click="$ctrl.emailInput(emailInfo)"></i>
 </div>
+
+<!-- EMAIL MODAL DIRECTIVE -->
+<email-modal ng-hide="$ctrl.isSubmitted"></email-modal>
