--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -9,4 +9,5 @@
 @import "./components/productReviews";
 @import "./components/social";
 @import "./components/emailInput";
+@import "./components/emailModal";
 @import "./components/about";
