--- a/public/components/headerComponent/header.component.html
+++ b/public/components/headerComponent/header.component.html
@@ -13,13 +13,9 @@
 <section class="sidemenu-container" ng-class="{'sidemenu-active': $ctrl.isActive}" >
     <i class="material-icons close-menu" ng-click="$ctrl.openMenu()">close</i>
     <ul ng-class="{'list-active': $ctrl.isActive}">
-        <a href="#!/jackets/saga-puff-polly-combo-jacket" ng-click="$ctrl.openMenu()"><li>Saga</li></a>
-        <a href="#!/jackets/penfield-bowerbridge-down-jacket" ng-click="$ctrl.openMenu()"><li>Penfield</li></a>
-        <a href="#!/jackets/patagonia-wanaka-down-jacket" ng-click="$ctrl.openMenu()"><li>Patagonia</li></a>
-        <a href="#!/jackets/quiksilver-impact-2L-gore-tex-jacket" ng-click="$ctrl.openMenu()"><li>QuickSilver</li></a>
-        <a href="#!/jackets/fjallraven-greenland-no.-1-down-jacket" ng-click="$ctrl.openMenu()"><li>Fjallraven</li></a>
-        <a href="#!/jackets/salomon-qst-snow-jacket" ng-click="$ctrl.openMenu()"><li>Salomon</li></a>
-        <a href="#!/jackets/norr%C3%B8na-29-gore-tex-primaloft-insulated-parka" ng-click="$ctrl.openMenu()"><li>Norrona</li></a>
+        <a href="#!/jackets" ng-click="$ctrl.openMenu()"><li>Jackets</li></a>
+        <a href="#!/about" ng-click="$ctrl.openMenu()"><li>About</li></a>
+        <a href="#!/contact" ng-click="$ctrl.openMenu()"><li>Contact</li></a>
 
     </ul>
     <i class="material-icons sidemenu-logo" ng-class="{'sidemenu-logo-active': $ctrl.isActive}">change_history</i>
