completed functionality of email thank you modal

--- a/public/components/headerComponent/header.component.html
+++ b/public/components/headerComponent/header.component.html
@@ -16,8 +16,9 @@
         <a href="#!/jackets" ng-click="$ctrl.openMenu()"><li>Jackets</li></a>
         <a href="#!/about" ng-click="$ctrl.openMenu()"><li>About</li></a>
         <a href="#!/contact" ng-click="$ctrl.openMenu()"><li>Contact</li></a>
-
     </ul>
+
     <i class="material-icons sidemenu-logo" ng-class="{'sidemenu-logo-active': $ctrl.isActive}">change_history</i>
+    <h1 class="sidemenu-name" ng-class="{'sidemenu-name-active': $ctrl.isActive}">Konsumer</h1>
 
 </section>
