--- a/public/css/components/_emailModal.scss
+++ b/public/css/components/_emailModal.scss
@@ -3,13 +3,14 @@
     top: 0;
     left: 0;
     overflow: hidden;
-    background: rgba(0,0,0, .6);
+    background: rgba(0,0,0, .7);
     width: 100vw;
     height: 100vh;
     .box {
+        position: relative;
         background: $white;
         height: 350px;
-        width: 400px;
+        width: 90%;
         color: $black;
         border-radius: 5px;
         box-shadow: 0px 5px 20px rgba(0,0,0,.9);
@@ -25,9 +26,25 @@
     i {
         font-size: 50px;
     }
+    .modal-close {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        font-size: 24px;
+
+    }
     h4 {
         font-size: 1.5em;
         text-transform: uppercase;
         color: darkolivegreen;
+    }
+}
+
+
+@media(min-width: 600px){
+    .email-modal {
+        .box {
+            width: 400px;
+        }
     }
 }
