--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -107,7 +107,17 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: 90px;
+        font-size: 65px;
+        opacity: 0;
+        transform: translate3d(0,0px,0);
+        margin-bottom: 5px;
+    }
+    .sidemenu-name {
+        text-align: center;
+        font-weight: 100;
+        text-transform: uppercase;
+        color: darkolivegreen;
+        font-size: 2em;
         opacity: 0;
         transform: translate3d(0,0px,0);
     }
@@ -139,6 +149,16 @@
 }
 
 .sidemenu-container .sidemenu-logo-active {
+    transition: transform 1s ease, opacity 1s ease .25s;
+    opacity: 1;
+    transform: translate3d(0,35px,0);
+}
+
+.sidemenu-container .sidemenu-name {
+    transition: transform 1s ease, opacity .75s ease;
+}
+
+.sidemenu-container .sidemenu-name-active {
     transition: transform 1s ease, opacity 1s ease .25s;
     opacity: 1;
     transform: translate3d(0,35px,0);
