--- a/public/css/components/_emailModal.scss
+++ b/public/css/components/_emailModal.scss
@@ -3,9 +3,10 @@
     top: 0;
     left: 0;
     overflow: hidden;
-    background: rgba(0,0,0, .7);
+    background: rgba(0,0,0, .8);
     width: 100vw;
     height: 100vh;
+    opacity: 0;
     .box {
         position: relative;
         background: $white;
@@ -17,6 +18,8 @@
         margin: 13vh auto;
         text-align: center;
         padding: 90px 25px 0px;
+        transform: translate3d(0,-200px,0);
+        opacity: 0;
     }
     h1 {
         font-size: 2em;
@@ -38,7 +41,30 @@
         text-transform: uppercase;
         color: darkolivegreen;
     }
+
+
 }
+
+ //ANIMATIONS FOR MODAL ENTRY
+.email-modal .box {
+    transition: all .7s ease;
+}
+
+.email-modal .box.box-active {
+    transition: opacity .7s ease, transform .5s ease;
+    transform: translate3d(0,0,0);
+    opacity: 1;
+}
+
+.email-modal {
+    transition: all .7s ease;
+}
+
+.email-modal.modal-active {
+    opacity: 1;
+}
+
+
 
 
 @media(min-width: 600px){
