adding updated server files and refactored code

--- a/public/css/components/_emailInput.scss
+++ b/public/css/components/_emailInput.scss
@@ -106,3 +106,12 @@
     }
 
 }
+
+
+@media(min-width:1024px){
+    .email-input {
+        input {
+            min-width: 350px;
+        }
+    }
+}
