--- a/public/css/components/_emailModal.scss
+++ b/public/css/components/_emailModal.scss
@@ -7,6 +7,7 @@
     width: 100vw;
     height: 100vh;
     opacity: 0;
+    z-index: 10;
     .box {
         position: relative;
         background: $white;
@@ -24,7 +25,10 @@
     h1 {
         font-size: 2em;
         color: $black;
-        margin-bottom: 45px;
+        margin-bottom: 20px;
+    }
+    p {
+        margin-bottom: 20px;
     }
     i {
         font-size: 50px;
@@ -34,6 +38,9 @@
         top: 15px;
         right: 15px;
         font-size: 24px;
+        &:hover {
+            cursor: pointer;
+        }
 
     }
     h4 {
@@ -67,7 +74,7 @@
 
 
 
-@media(min-width: 600px){
+@media(min-width: 450px){
     .email-modal {
         .box {
             width: 400px;
