--- a/public/css/components/_footer.scss
+++ b/public/css/components/_footer.scss
@@ -19,7 +19,6 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
-        // border-top: 1px solid;
         padding-top: 10px;
         .copy {
             color: white;
@@ -57,5 +56,11 @@ footer {
 @media(min-width: 1024px) {
     footer {
         min-height: 210px;
+        h1 {
+            font-size: 1.75em;
+        }
+        .footer-bottom {
+            margin-bottom: 50px;
+        }
     }
 }
