add favicon logo and updated about icon section css

--- a/public/components/jacketComponent/jackets.component.html
+++ b/public/components/jacketComponent/jackets.component.html
@@ -1,7 +1,7 @@
 <div class="sort-container">
     <span class="sort-by">Sort By:
 </span>
-    <select ng-model="$ctrl.order">
+    <select class="product-select" ng-model="$ctrl.order">
         <option value="name">Name *</option>
         <option value="price">Price Low to High *</option>
         <option value="-price">Price High to Low *</option>
