--- a/public/components/cartComponent/cart.component.html
+++ b/public/components/cartComponent/cart.component.html
@@ -1,13 +1,21 @@
 <section class="cart-container">
     <h1>Shopping Cart</h1>
-    <div class="item-container">
-        <img ng-src="./img/jackets/bkBig.jpg"/>
-        <div class="desc-container">
-            <p>This is a basic description of the item for the cart</p>
-            <p>quantity {{ $ctrl.quantity }}</p>
-            <p>$399.00</p>
+
+    <!-- SHOPPING CART NG-REPEAT -->
+
+        <!-- <div ng-repeat="item in $ctrl.cart" class="item-container">
+            <img ng-src="{{ item.imageUrl }}"/>
+            <div class="desc-container">
+                <p>{{item.description}}</p>
+                <p>quantity {{ item.quantity }}</p>
+                <p>${{ item.price }}</p>
+            </div>
+        </div> -->
+        <div class="">
+            {{ $ctrl.cart }}
         </div>
-    </div>
+
+    <!-- SHOPPING CART TOTAL -->
     <div class="total-container">
         <ul>
             <li>Subtotal {{ $ctrl.subtotal }}</li>
