--- a/public/components/headerComponent/header.component.html
+++ b/public/components/headerComponent/header.component.html
@@ -1,7 +1,7 @@
 <nav class="main-nav">
     <i class="material-icons" ng-click="$ctrl.openMenu()">menu</i>
     <div >
-        <a href="#!/jackets" class="link">K</a>
+        <a href="#!/cart" class="link">K</a>
     </div>
 </nav>
 
