--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -1,6 +1,7 @@
 // VARIABLES /////////////////
 $europa: "europa", sans-serif;
 $gray: #969696;
+$lightgray: #f2f2f2;
 $black: #010101;
 $brickred: #990000;
 $olive: darkolivegreen;
