--- a/public/css/components/_cart.scss
+++ b/public/css/components/_cart.scss
@@ -1,12 +1,15 @@
 .cart-container {
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 70px;
     h1 {
-        font-size: 2.5em;
-        margin-bottom: 30px;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 2em;
+        margin-bottom: 40px;
     }
     img {
-        width: 15%;
+        width: 25%;
     }
     .item-container {
         border: 1px solid lightgray;
@@ -15,16 +18,67 @@
         justify-content: space-between;
         padding: 20px;
         margin-bottom: 30px;
+        -webkit-box-shadow: inset 0px 0px 7px 0px rgba(0,0,0,0.1);
+        -moz-box-shadow: inset 0px 0px 7px 0px rgba(0,0,0,0.1);
+        box-shadow: inset 0px 0px 7px 0px rgba(0,0,0,0.1);
     }
     .desc-container {
         width: 85%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        p {
+            font-weight: 100;
+        }
+        .desc-product {
+            display: none;
+            font-weight: 600;
+            text-transform: uppercase;
+            width: 50%;
+        }
+        span {
+            margin-left: 8px;
+            color: $olive;
+        }
     }
     .total-container {
         margin-bottom: 30px;
+        ul {
+            margin-bottom: 40px;
+        }
         li {
             margin-bottom: 8px;
         }
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: black;
+            border: 2px solid black;
+            height: 50px;
+            width: 170px;
+            text-transform: uppercase;
+            color: white;
+        }
+        i {
+            font-size: 18px;
+            margin-left: 8px;
+        }
     }
+}
+
+@media(min-width: 600px){
+    .cart-container {
+        h1 {
+            text-align: left;
+        }
+        img {
+            width: 20%;
+        }
+        .desc-container {
+            .desc-product {
+                display: block;
+            }
+        }
+    }
+
 }
