--- a/public/components/titleComponent/title.component.html
+++ b/public/components/titleComponent/title.component.html
@@ -1,5 +1,7 @@
-<div class="title-container">
-    <i class="material-icons">change_history</i>
-    <h1>Konsumer</h1>
-    <h5>Find Your Kool Jacket</h5>
+<div class="title-bg">
+    <div class="title-container">
+        <i class="material-icons">change_history</i>
+        <h1>Konsumer</h1>
+        <h5>Find Your Kool Jacket</h5>
+    </div>
 </div>
