--- a/public/css/components/_header.scss
+++ b/public/css/components/_header.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 10px;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     background: $black;
     .logo {
         width: 45px;
