--- a/public/css/components/_title.scss
+++ b/public/css/components/_title.scss
@@ -1,9 +1,17 @@
+.title-bg {
+    background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.2)), url('../../img/chris-biron-99839.jpg');
+    background-size: cover;
+    height: 450px;
+    background-position: center;
+    margin-bottom: 50px;
+}
 .title-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-bottom: 1px solid lightgray;
     padding-bottom: 50px;
+    padding-top: 50px;
     width: 65%;
     margin: 0 auto 60px;
     .main-logo {
