updated styling to title component

--- a/public/components/titleComponent/title.component.html
+++ b/public/components/titleComponent/title.component.html
@@ -4,4 +4,5 @@
         <h1>Konsumer</h1>
         <h5>Find Your Kool Jacket</h5>
     </div>
+    <p>An adventure awaits at the top of a mountain, to the bottom of the valley.</p>
 </div>
