added and styled main hero image and logos

--- a/public/components/titleComponent/title.component.html
+++ b/public/components/titleComponent/title.component.html
@@ -5,4 +5,5 @@
         <h5>Find Your Kool Jacket</h5>
     </div>
     <p>An adventure awaits at the top of a mountain, to the bottom of the valley.</p>
+    <i class="material-icons">keyboard_arrow_down</i>
 </div>
