--- a/public/css/components/_title.scss
+++ b/public/css/components/_title.scss
@@ -1,18 +1,27 @@
 .title-bg {
-    background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.5)), url('../../img/chris-biron-99839.jpg');
+    background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.2)), url('../../img/chris-biron-99839.jpg');
     background-size: cover;
     height: 450px;
     background-position: center;
     margin-bottom: 50px;
+    transition: .2s all ease;
     p {
         color: white;
-        width: 80%;
+        width: 65%;
         text-align: center;
         margin: 0 auto;
         font-style: italic;
         font-weight: 100;
         text-transform: uppercase;
         font-size: .9em;
+        max-width: 500px;
+    }
+    i {
+        display: block;
+        margin: 10px auto;
+        color: white;
+        font-size: 45px;
+        width: 45px;
     }
 }
 .title-container {
@@ -23,11 +32,14 @@
     padding-bottom: 50px;
     padding-top: 70px;
     width: 65%;
-    margin: 0 auto 60px;
+    max-width: 800px;
+    margin: 0 auto 50px;
+    transition: .2s all ease;
     .main-logo {
         font-size: 3.75em;
     }
     i {
+        width: 65px;
         font-size: 65px;
     }
     h1 {
@@ -54,8 +66,23 @@
 }
 
 @media(min-width: 992px) {
+    .title-bg {
+        background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.2)), url('../../img/chris-biron-99839.jpg');
+        background-size: cover;
+        height: 600px;
+        background-position: center;
+        margin-bottom: 50px;
+        p {
+            font-size: 1.125em;
+        }
+        i {
+            font-size: 55px;
+            width: 55px;
+        }
+    }
     .title-container {
         i {
+            width: 85px;
             font-size: 85px;
         }
         h1 {
