--- a/public/components/jacketComponent/jackets.component.html
+++ b/public/components/jacketComponent/jackets.component.html
@@ -1,3 +1,8 @@
+<div class="hero-image">
+    <!-- TITLE COMPONENT -->
+    <title-component></title-component>
+</div>
+
 <div class="sort-container">
     <span class="sort-by">Sort By:
 </span>
