--- a/public/components/titleComponent/title.component.html
+++ b/public/components/titleComponent/title.component.html
@@ -1,9 +1,9 @@
 <div class="title-bg">
     <div class="title-container">
-        <i class="material-icons">change_history</i>
-        <h1>Konsumer</h1>
+        <i class="material-icons title-logo">change_history</i>
+        <h1 class="title-title">Konsumer</h1>
         <h5>Find Your Kool Jacket</h5>
     </div>
-    <p>An adventure awaits at the top of a mountain, to the bottom of the valley.</p>
-    <i class="material-icons">keyboard_arrow_down</i>
+    <p class="title-phrase">An adventure awaits at the top of a mountain, to the bottom of the valley.</p>
+    <i class="material-icons title-arrow">keyboard_arrow_down</i>
 </div>
