styled sort container

--- a/public/components/jacketComponent/jackets.component.html
+++ b/public/components/jacketComponent/jackets.component.html
@@ -3,20 +3,24 @@
     <title-component></title-component>
 </div>
 
-<div class="sort-container">
-    <span class="sort-by">Sort By:
-</span>
-    <select class="product-select" ng-model="$ctrl.order">
-        <option value="name">Name *</option>
-        <option value="price">Price Low to High *</option>
-        <option value="-price">Price High to Low *</option>
-    </select>
+<!-- SEARCH AREA -->
+<div class="search-sort">
+    <div class="sort-container">
+        <span class="sort-by">Sort By:
+    </span>
+        <select class="product-select" ng-model="$ctrl.order">
+            <option value="name">Name *</option>
+            <option value="price">Price Low to High *</option>
+            <option value="-price">Price High to Low *</option>
+        </select>
+    </div>
+    <p class="input-container">
+        <input type="text" placeholder="Search" ng-model="search">
+        <img ng-src="./img/search-outline.svg"/>
+    </p>
 </div>
-<p class="input-container">
-    <input type="text" placeholder="Search" ng-model="search">
-    <img ng-src="./img/search-outline.svg"/>
-</p>
 
+<!-- JACKETS CONTAINER/PRODUCTS -->
 <section class="jackets-container">
         <div ng-repeat="jacket in $ctrl.jacketList | filter:search | orderBy:$ctrl.order" class="shop-items-container jacket-list-item">
             <a href="#!/jackets/{{ jacket.id }}"><img ng-src="{{ jacket.imageUrl }}"/></a>
