--- a/public/css/components/_cart.scss
+++ b/public/css/components/_cart.scss
@@ -1,6 +1,7 @@
 .cart-container {
     width: 90%;
     margin: 0 auto 70px;
+    padding-top: 50px;
     h1 {
         text-align: center;
         text-transform: uppercase;
