--- a/public/components/jacketComponent/jackets.component.html
+++ b/public/components/jacketComponent/jackets.component.html
@@ -8,17 +8,28 @@
     <div class="sort-container">
         <span class="sort-by">Sort By:
     </span>
-        <select class="product-select" ng-model="$ctrl.order">
+        <!-- <select class="product-select" ng-model="$ctrl.order">
             <option value="name">Name *</option>
             <option value="price">Price Low to High *</option>
             <option value="-price">Price High to Low *</option>
-        </select>
+        </select> -->
+        <div class="sort-drop">
+            <span>v</span>
+            <ul class="product-select" ng-model="$ctrl.order">
+                <li value="name">Name</li>
+                <li value="price">Price Low to High</li>
+                <li value="-price">Price High to Low</li>
+            </ul>
+        </div>
+
     </div>
     <p class="input-container">
         <input type="text" placeholder="Search" ng-model="search">
         <img ng-src="./img/search-outline.svg"/>
     </p>
 </div>
+
+<h1 class="jackets-title">Jackets</h1>
 
 <!-- JACKETS CONTAINER/PRODUCTS -->
 <section class="jackets-container">
