--- a/public/components/jacketComponent/jackets.component.html
+++ b/public/components/jacketComponent/jackets.component.html
@@ -8,19 +8,19 @@
     <div class="sort-container">
         <span class="sort-by">Sort By:
     </span>
-        <!-- <select class="product-select" ng-model="$ctrl.order">
+        <select class="product-select" ng-model="$ctrl.order">
             <option value="name">Name *</option>
             <option value="price">Price Low to High *</option>
             <option value="-price">Price High to Low *</option>
-        </select> -->
-        <div class="sort-drop">
+        </select>
+        <!-- <div class="sort-drop">
             <span>v</span>
             <ul class="product-select" ng-model="$ctrl.order">
                 <li value="name">Name</li>
                 <li value="price">Price Low to High</li>
                 <li value="-price">Price High to Low</li>
             </ul>
-        </div>
+        </div> -->
 
     </div>
     <p class="input-container">
