created login component, module, with styling of form

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -11,3 +11,4 @@
 @import "./components/emailInput";
 @import "./components/emailModal";
 @import "./components/about";
+@import "./components/login";
