--- a/public/components/headerComponent/header.component.html
+++ b/public/components/headerComponent/header.component.html
@@ -15,6 +15,7 @@
     <ul ng-class="{'list-active': $ctrl.isActive}">
         <a href="#!/jackets" ng-click="$ctrl.openMenu()"><li>Jackets</li></a>
         <a href="#!/about" ng-click="$ctrl.openMenu()"><li>About</li></a>
+        <a href="#!/login" ng-click="$ctrl.openMenu()"><li>Login</li></a>
         <a href="#!/contact" ng-click="$ctrl.openMenu()"><li>Contact</li></a>
     </ul>
 
