added more styling to login page

--- a/public/components/loginComponent/loginComponent.template.html
+++ b/public/components/loginComponent/loginComponent.template.html
@@ -1,8 +1,15 @@
-<h1>Login To Your Account</h1>
+<h1 class="login-title">Konsumer</h1>
 <section class="form-container">
     <form class="" action="" method="post">
-        <input type="text" name="username" value="" placeholder="Username">
-        <input type="password" name="password" value="" placeholder="Password">
+        <h3 class="login-account">Login To Your Account</h3>
+        <div class="login-input-container">
+            <i class="fa fa-user login-icons" aria-hidden="true"></i>
+            <input type="text" name="username" value="" placeholder="Username">
+        </div>
+        <div class="login-input-container">
+            <i class="fa fa-lock login-icons" aria-hidden="true"></i>
+            <input type="password" name="password" value="" placeholder="Password">
+        </div>
         <button type="submit" name="button">Sign In</button>
     </form>
     <a href="#"><p>Create Account</p></a>
