fine tuned css for login page

--- a/public/components/loginComponent/loginComponent.template.html
+++ b/public/components/loginComponent/loginComponent.template.html
@@ -1,4 +1,6 @@
+<i class="material-icons login-triangle">change_history</i>
 <h1 class="login-title">Konsumer</h1>
+<div class="login-line"></div>
 <section class="form-container">
     <form class="" action="" method="post">
         <h3 class="login-account">Login To Your Account</h3>
