--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -46,6 +46,7 @@
 }
 
 .sort-drop {
+    display: none;
     background: $white;
     width: 100%;
     left: 0;
@@ -57,6 +58,10 @@
     box-shadow: inset 0px 0px 5px rgba(0,0,0,0.2);
     li {
         margin-bottom: 8px;
+        &:hover {
+            color: $brickred;
+            cursor: pointer;
+        }
     }
 }
 
