--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -57,10 +57,15 @@
     top: 49px;
     box-shadow: inset 0px 0px 5px rgba(0,0,0,0.2);
     li {
-        margin-bottom: 8px;
+        padding: 5px 0;
+        transition: all .2s ease;
         &:hover {
             color: $brickred;
             cursor: pointer;
+            background: #f2f2f2;
+            border: 1px solid black;
+            border-radius: 2px;
+            padding-left: 5px;
         }
     }
 }
