--- a/public/components/createAccountComponent/createAccount.template.html
+++ b/public/components/createAccountComponent/createAccount.template.html
@@ -3,7 +3,7 @@
 <div class="login-line"></div>
 <section class="form-container">
     <form class="" action="" method="post">
-        <h3 class="login-account">Login To Your Account</h3>
+        <h3 class="login-account">Create Your Account</h3>
         <div class="login-input-container">
             <i class="fa fa-user login-icons" aria-hidden="true"></i>
             <input type="text" name="username" value="" placeholder="Username">
@@ -12,7 +12,7 @@
             <i class="fa fa-lock login-icons" aria-hidden="true"></i>
             <input type="password" name="password" value="" placeholder="Password">
         </div>
-        <button type="submit" name="button">Sign In</button>
+        <button type="submit" name="button">Sign Up</button>
     </form>
-    <a href="/#!/create-account"><p>Create Account</p></a>
+    <a href="/#!/login"><p>Back To Login</p></a>
 </section>
