--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -58,14 +58,14 @@
     box-shadow: inset 0px 0px 5px rgba(0,0,0,0.2);
     li {
         padding: 5px 0;
-        transition: all .2s ease;
+        transition: padding-left .4s ease .1s, background-color .4s ease;
         &:hover {
-            color: $brickred;
+            color: $white;
             cursor: pointer;
-            background: #f2f2f2;
+            background-color: $black;
             border: 1px solid black;
             border-radius: 2px;
-            padding-left: 5px;
+            padding-left: 8px;
         }
     }
 }
