--- a/public/css/components/_login.scss
+++ b/public/css/components/_login.scss
@@ -23,16 +23,23 @@
     width: 85%;
     margin: 50px auto 120px;
     height: 300px;
-    border: 1px solid lightgray;
+    // border: 1px solid lightgray;
     border-radius: 2px;
     box-shadow: inset 0px 0px 3px 0 rgba(0,0,0,.15);
     max-width: 475px;
+    background: #8E0E00;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(left, #1F1C18, #990000);
+    background: -o-linear-gradient(left, #1F1C18, #990000);
+    background: linear-gradient(to right, #1F1C18, #990000);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     form {
         padding-top: 40px;
     }
     .login-account {
         text-align: center;
         margin-bottom: 25px;
+        font-weight: 100;
+        color: $white;
     }
     .login-input-container {
         width: 75%;
@@ -51,7 +58,7 @@
         height: 40px;
         border: 1px solid lightgray;
         border-radius: 2px;
-        background: rgba(242,242,242,0.3);
+        // background: rgba(242,242,242,0.3);
         margin-bottom: 20px;
         text-align: center;
         &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
@@ -76,5 +83,6 @@
         margin: 8px auto;
         text-align: center;
         font-size: .8em;
+        color: $lightgray;
     }
 }
