--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -1,11 +1,19 @@
 .hero-image {
-    background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.2)), url('../../img/chris-biron-99839.jpg');
+    background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.2)), url('../../img/vlad-deep-218496.jpg');
     background-size: cover;
     height: 450px;
     background-position: center;
-    margin-bottom: 50px;
     margin-bottom: 40px;
     transition: .2s all ease;
+}
+
+.search-title {
+    margin-bottom: 20px;
+    text-align: center;
+    p {
+        text-transform: uppercase;
+        font-weight: 100;
+    }
 }
 
 .search-sort {
@@ -20,7 +28,7 @@
 
 .sort-container {
     width: 85%;
-    margin: 0 auto 30px;
+    margin: 0 auto 50px;
     background: black;
     color: white;
     position: relative;
@@ -29,6 +37,9 @@
     display: flex;
     align-items: center;
     padding-left: 12px;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .sort-by {
@@ -220,7 +231,7 @@ select.product-select {
 
 @media(min-width: 992px){
     .hero-image {
-        height: 600px;
+        height: 650px;
         background-position: center;
         background-position: 50% 95%;
     }
