--- a/public/css/base/_mainStyles.scss
+++ b/public/css/base/_mainStyles.scss
@@ -7,6 +7,13 @@ $brickred: #990000;
 $olive: darkolivegreen;
 $white: #fff;
 
+// MIXINS //
+@mixin headline-text {
+    font-size: 2.75em;
+    font-weight: 100;
+    text-transform: uppercase;
+}
+
 //////////////////////////////
 
 * {
@@ -31,4 +38,8 @@ p {
     width: 95%;
     max-width: 1025px;
     margin: 0 auto;
+}
+
+button:hover {
+    cursor: pointer;
 }
