--- a/public/css/components/_jackets.scss
+++ b/public/css/components/_jackets.scss
@@ -201,6 +201,7 @@ select.product-select {
         width: 95%;
         margin: 0 auto;
         align-items: center;
+        justify-content: center;
         flex-direction: row;
         padding-bottom: 50px;
     }
@@ -234,9 +235,21 @@ select.product-select {
         height: 650px;
         background-position: center;
         background-position: 50% 95%;
+        margin-bottom: 75px;
     }
     .jackets-title {
         margin: 80px 0;
+    }
+    .search-title {
+        i {
+            font-size: 32px;
+        }
+        p {
+            font-size: 1.5em;
+        }
+    }
+    .search-sort {
+        padding-bottom: 100px;
     }
 }
 
